turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:35: error: type mismatch;
 found   : Array[java.awt.Color]
 required: Array[Char]
			step(colors,rule);
                             ^Turmite:35: error: type mismatch;
 found   : Array[Array[Array[Int]]]
 required: Array[java.awt.Color]
			step(colors,rule);
                                    ^